[tool.poetry]
name = "emush-llm"
version = "0.1.0"
description = ""
authors = ["Charles-Meldhine Madi Mnemoi <charlesmeldhine.madimnemoi@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.7"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"